Bug 252962 - R: Kmail-mobile crashes when adding recipient
Summary: R: Kmail-mobile crashes when adding recipient
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: VHI critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-01 21:00 UTC by Sabine Faure
Modified: 2010-10-22 01:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-10-01 21:00:25 UTC
Version:           unspecified (using Devel) 
OS:                Linux

When the user tries to type in the 'to' line edit (recipients' tab) Kmail-mobile crashes whereas it was working fine before.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Click on 'Write new email' button
- Open the 'Recipients' tab
- Click in the 'to' line edit

Actual Results:  
Kmail-mobile crashes

If you cannot reproduce try typing a letter (ex: s)

Expected Results:  
Kmail-mobile should not crash.
The user should be able to enter an email address properly like it was the case before.


Note: I encountered this bug while retesting bug #248299 but I believe it is linked to bug #252903 'Wrong characters displayed in recipients tab'

Here is what I got in the terminal:

#0  0x41433930 in QWidget::insertAction(QAction*, QAction*) () from /opt/qt4-maemo5/lib/libQtGui.so.4
#1  0x41433bd0 in QWidget::addAction(QAction*) () from /opt/qt4-maemo5/lib/libQtGui.so.4
#2  0x419123e8 in QMenu::addSeparator() () from /opt/qt4-maemo5/lib/libQtGui.so.4
#3  0x408ceb14 in MessageComposer::ComposerLineEdit::contextMenuEvent (this=0xa9ba40, e=0xbec5f2f0)
    at /home/maemo/default/work/kdepim-4.5~20101001.1181533/messagecomposer/composerlineedit.cpp:207
#4  0x414465c4 in QWidget::event(QEvent*) () from /opt/qt4-maemo5/lib/libQtGui.so.4
#5  0x418d6514 in QLineEdit::event(QEvent*) () from /opt/qt4-maemo5/lib/libQtGui.so.4
#6  0x4111abdc in KLineEdit::event(QEvent*) () from /usr/lib/libkdeui.so.5
#7  0x413df1b0 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /opt/qt4-maemo5/lib/libQtGui.so.4
#8  0x413e2bc8 in QApplication::notify(QObject*, QEvent*) () from /opt/qt4-maemo5/lib/libQtGui.so.4
#9  0xbec5f324 in ?? ()

N900, 4:4.5~20101001.1181533-1maemo1.1181469
Comment 1 Felix Wolfsteller 2010-10-04 10:07:10 UTC
Cannot reproduce with 4:4.5~20101001.1181430-1maemo1.1181463 (also chose a letter for which autocompletion found a match).
Comment 2 Volker Krause 2010-10-04 10:39:25 UTC
SVN commit 1182337 by vkrause:

Don't crash if there is no context menu.

BUG: 252962


 M  +2 -0      libkdepim/addresseelineedit.cpp  
 M  +2 -0      messagecomposer/composerlineedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1182337
Comment 3 Sabine Faure 2010-10-22 01:34:19 UTC
I retested this today and I could not reproduce the crash anymore.

So I am closing this bug. I will reopen if needed.

N900, 4:4.6~20101021.1188097-1maemo1.1187374