Don't crash if there is no context menu.

BUG: 252962

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1182337